<TextView
    android:id="@+id/step"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_margin="16dp"
    android:textStyle="bold"
    android:textSize="24sp"
    android:padding="1dp"
    android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
</TextView>