<FrameLayout
    android:id="@+id/recipe_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context="com.example.backingapp.fragment.RecipeFragment">
    <android.support.v7.widget.RecyclerView
    android:id="@+id/recipes_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent" />
</FrameLayout>