<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#EEEFEF"
    android:padding="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/recipe_ingerdients_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recipe_ingerdients"
        android:textSize="24sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/recipe_ingerdients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/step_recycle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    </android.support.v7.widget.RecyclerView>

</LinearLayout>